# faad2-rs

./: Cargo.toml
.github/workflows/: build.yaml
faad2-sys/: Cargo.toml  build.rs
faad2-sys/src/: lib.rs
src/: lib.rs
