[package]
name = "faad2"
version = "2.11.2"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2021"
license = "GPL-2.0"
description = "AAC decoding library binding to libfaad2"
homepage = "https://github.com/haileys/faad2-rs"
repository = "https://github.com/haileys/faad2-rs"

[dependencies]
faad2-sys = { version = "2.11.2", path = "faad2-sys" }
