[package]
name = "faad2-sys"
version = "2.11.2"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2021"
license = "GPL-2.0"
description = "FFI bindings for libfaad2"
homepage = "https://github.com/haileys/faad2-rs"
repository = "https://github.com/haileys/faad2-rs"

[dependencies]

[build-dependencies]
cc = "1.0"
